--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -14,7 +14,10 @@
     --clr-neutral-900: 225, 9%, 6%;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     position: relative;
-    overflow-x: hidden;
 }
